# riba-agent

./: .gitignore  README.md  package-lock.json  package.json
backend/: main.py  model.py  pyproject.toml  test.ipynb
backend/SSA_maize_yield_response/: 3_0_yield_response_to_N.py  gadm_ssa.gpkg
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/webhooks/whatsapp/: route.ts
frontend/components/: AppNav.tsx  Chat.jsx
frontend/components/ai-elements/: schema-display.tsx
frontend/lib/: agents.ts  bot.ts  tools.ts  yield-intent.ts
