[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ee>=0.2",
    "flask>=3.1.3",
    "gunicorn>=25.3.0",
    "ipython>=8.39.0",
    "joblib>=1.5.3",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "rasterio>=1.4.3",
    "scikit-learn==1.4.2",
]
